adjust pit to only act on cohabitants